# exadaps-aff-eval

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Hpe aff pipeline prompt.md  README.md  analyze_forms.py  blank_form_generator.py  form_harness.py  pyproject.toml  requirements.txt
.github/: CLAUDE_WORKFLOW.md  claude workflow.md
.github/workflows/: ci.yml
data_pipeline/: __init__.py  cli.py  consolidate.py  loader.py  order.py  storage.py
data_pipeline/generate/: __init__.py  degradation.py  synthetic.py
data_pipeline/ingest/: __init__.py  funsd.py  rvlcdip.py  vrdu.py  xfund.py
data_pipeline/tests/: conftest.py  test_pipeline.py
docs/: ROADMAP.md  dataset-exclusions.md
docs/approaches/: image-fallback.md  pymupdf-redact.md
legacy/: Hpe aff pipeline prompt.md  README.md
src/aff/blank_forms/: __init__.py  __main__.py  acroform_clear.py  classify.py  debug.py  geom.py  image_fallback.py  pymupdf_redact.py  redact.py
src/aff/blank_forms/image_fallback/: __init__.py  __main__.py  background.py  classify.py  debug.py  pipeline.py  redact.py  touch_up.py
src/aff/ingest/: funsd.py  vrdu.py
src/aff/synth/: __init__.py  build_dataset.py  build_manifest.py  classify.py  combine.py  document_kind.py  preview.py  sample.py
tests/blank_forms/: test_classify.py  test_image_fallback.py  test_pymupdf_redact.py
tests/blank_forms/image_fallback/: test_classify.py  test_pipeline.py  test_touch_up.py
tests/blank_forms/image_fallback/manual/: debug_background_sample.py  debug_classify_overlay.py
tests/blank_forms/manual/: compare_v_kernels.py  debug_background_sample.py  debug_classify_overlay.py  debug_funsd_one_bbox.py
tests/fixtures/golden_set/: CANDIDATES.md  README.md  funsd.fields.json  manifest.json  synthetic_supplier.fields.json  vrdu_born_digital.fields.json  vrdu_scan.fields.json  xfund_de.fields.json  xfund_de_train_2.fields.json  xfund_de_train_49.fields.json  xfund_fr_train_21.fields.json
tests/synth/: test_build_dataset.py  test_build_manifest.py  test_classify.py  test_combine.py  test_document_kind.py  test_preview.py  test_sample.py
