[project]
name = "aff"
version = "0.1.0"
description = "HPE-AFF — automated form filling pipeline"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.7",
    "datasets>=2.19.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.2.0",
    "pillow>=10.3.0",
    "pyarrow>=16.0.0",
    "pymupdf>=1.24.0",
    "pypdf>=4.0.0",
    "reportlab>=4.2.0",
    "requests>=2.31.0",
    "structlog>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "network: requires network access (skipped by default in CI)",
    "slow: longer-running tests",
]

[tool.coverage.run]
source = ["src/aff"]
omit = [
    # Network-bound: gated behind the `network` pytest marker
    "src/aff/ingest/*",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pylint.typecheck]
# opencv-python's bindings are generated dynamically -- pylint can't
# introspect them even with extension-pkg-allow-list. Treat every cv2
# attribute as runtime-generated so we don't have to scatter
# # pylint: disable=no-member across the classifier.
generated-members = ["cv2.*"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pylint>=3.0.0",
]
